# nl-mgo-localization

./: .codespell_ignore.txt  .coveragerc  .gitattributes  .gitignore  .safety-policy.yml  CONTRIBUTING.md  Dockerfile  HOSTING_CHANGELOG.md  LICENSE.md  LICENSES.md  Makefile  README.md  app.ci.conf  app.conf.example  app.conf.test  docker-compose.yml  docker-entrypoint.sh  pki_overview.json  pyproject.toml  sonar-project.properties  version.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/PULL_REQUEST_TEMPLATE/: change_template.md
.github/actions/setup-app/: action.yml
.github/actions/src-package/: action.yml
.github/actions/validate-pr-description/: action.yml
.github/workflows/: ci.yaml  release-package.yml  validate-pr-meta.yml
app/: bindings.py  constants.py  fhir_uris.py  main.py  path.py  utils.py
app/addressing/: addressing_service.py  constants.py  factories.py  models.py  repositories.py  schemas.py  services.py  signing_service.py
app/addressing/mock/: mock_adapter.py  response.json
app/addressing/zal/: zal_adapter.py
app/benchmark/: router.py
app/benchmark/zorgab/: benchmark.py  models.py  services.py  utils.py
app/config/: factories.py  models.py  services.py  utils.py
app/cron/: __main__.py  arg_types.py  commands.py  cron.py  utils.py  zal_importer.py  zorgab_healthcare_scrape_command.py
app/cron/commands/: commands.py  normalization_command.py  update_search_index_command.py
app/cron_tasks/: __init__.py  dispatcher.py  models.py  orchestrator.py  runner.py  supervisor.py
app/db/: db.py  db_session.py  models.py  repositories.py
app/demo/: routers.py  services.py
app/docs/: routers.py
app/healthcarefinder/: factory.py  healthcarefinder.py  interface.py  models.py
app/healthcarefinder/mock/: adapter.py  fixtures.py
app/healthcarefinder/zorgab/: hydration_service.py  models.py  patch.py  zorgab.py
app/healthcarefinder/zorgab_mock/: zorgab_mock.py  zorgab_response_001.json
app/logger/: factory.py
app/normalization/: bundle.py  bundle_iterator.py  decorators.py  fields.py  models.py  organization_normalizer.py  services.py  utils.py
app/routers/: default.py  health.py  location.py  schemas.py
app/search_indexation/: constants.py  models.py  repositories.py  services.py  writer.py
app/version/: services.py
app/xml/: exceptions.py  services.py
app/zal_importer/: enums.py  exceptions.py  factories.py  importers.py  services.py
app/zorgab_scraper/: config.py  factories.py  models.py  repositories.py  scraper.py  services.py
docs/: addressing.md  auto-pilot.md  zal_import.md  zorgab.md
resources/benchmark/zorgab/: default_input.json
resources/search_index/: mock-endpoints.json  mock-organizations.json
sql/: 000-initial.sql  001-cities.sql  002-cities-import.sql  006-zal-list.sql  007-data-model-refactor.sql  008-fix-permissions.sql  009-remove-endpoint-signature.sql
static/: swagger-init-custom.js
tests/: conftest.py  utils.py
tests/_factories/: __init__.py  data_service.py  endpoint.py  identifying_feature.py  organisation.py  system_role.py
tests/_fixtures/: FAKE_placeholder_jwe_encryption.pub  FAKE_private_signing.key
tests/_resources/identifier_sources/: agb_dummy.csv  zakl_dummy.xml
tests/_resources/mock_organizations/: mock-addressing.json  mock-organizations.json
tests/_resources/snapshots/: search-index-aliases.json  search-index-basic.json  search-index-geolocation.json  search-index-missing_address.json  search-index-real_and_mocked_organizations.json
tests/_resources/stubs/: zorgab_search_bundle_aliases.json  zorgab_search_bundle_basic.json  zorgab_search_bundle_geolocation.json  zorgab_search_bundle_missing_address.json  zorgab_search_bundle_real_and_mocked_organizations.json
tests/addressing/: test_repositories.py  test_schemas.py  test_services.py  test_signing_service.py
tests/addressing/mock/: test_mock_adapter.py
tests/app/: test_main.py
tests/app/addressing/: test_factories.py  test_repositories.py
tests/app/addressing/mock/: test_mock_adapter.py
tests/app/benchmark/zorgab/: test_benchmark.py
tests/app/config/: test_models.py
tests/app/cron/: test_arg_types.py  test_cron.py  test_cron_features.py  test_utils.py
tests/app/cron/commands/: test_normalization_command.py  test_update_search_index_command.py  test_update_search_index_feature.py
tests/app/cron_tasks/: test_dispatcher.py  test_models.py  test_orchestrator.py  test_runner.py  test_supervisor.py  utils.py
tests/app/db/: test_repositories.py
tests/app/demo/: test_demo_services.py  test_routers.py
tests/app/docs/: test_router.py
tests/app/healthcarefinder/: test_factories.py  test_mock_adapter.py  test_models.py
tests/app/healthcarefinder/zorgab/: test_hydration_service.py  test_patch.py  test_zorgab.py  (+1 more)
tests/app/logging/: test_logger.py
tests/app/normalization/: test_bundle_custom.py  test_decorators.py  test_normalizer.py  test_organization.py  test_services.py  test_utils.py
tests/app/routers/: test_health.py
tests/app/search_indexation/: test_repositories.py  test_services.py  test_writer.py
tests/app/version/: test_services.py
tests/app/xml/: dummy.xml  test_services.py
tests/app/zal_importer/: MedMij_Zorgaanbiederskoppellijst_example.5.1.xml  MedMij_Zorgaanbiederslijst_example.9.3.xml  test_factories.py  test_importers.py  test_services.py
tests/app/zorgab_scraper/: test_command.py  test_factories.py  test_identifier_provider.py  test_identifier_repositories.py  test_models.py  test_repositories.py  test_scrape_executor.py  test_scraper.py
tests/demo/: test_routers.py
tests/factories/: data_service.py  identifying_feature.py  organisation.py
tests/healthcarefinder/: test_factory.py  test_healthcarefinder.py  test_mock_adapter.py  test_models.py
tests/healthcarefinder/zorgab/: test_hydration_service.py  test_zorgab.py  test_zorgab_adapter.py
tests/resources/: correct.conf  incorrect.conf  missing.conf
tests/routers/: test_default.py
tools/: autopilot.sh  generate-encryption-key.sh  generate-sign-key.sh  generate_certs.sh  migrate_db.sh
(+3 files in other folders)
