[tool.poetry]
name = "localization"
version = "0.0.0" # there is no need to bump this version as we don't distribute this as a package
description = "localization service for the MGO project"
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/nl-pgo-localization-private"
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.38.0"
fastapi = "^0.122.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"
psycopg = {extras = ["binary", "pool"], version = "^3.2.13"}
inject = "^5.3.0"
xmltodict = "^1.0.2"
requests = "^2.32.5"
fhir-resources = "^8.1.0"
cryptography = "^46.0.3"
orjson = "^3.11.4"
defusedxml = "^0.7.1"
lxml = "^6.0.2"
pytest-watcher = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
ruff = "^0.14.6"
codespell = "^2.4.1"
faker = "^38.2.0"
pytest-mock = "^3.15.1"
types-requests = "^2.32.4"
mypy = "^1.18.2"
pytest-watcher = "^0.4.3"
types-defusedxml = "^0.7.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = [
    "pyproject.toml",
    "app/*.py",
    "tests/*.py",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "ERA", "F", "B", "SIM", "I", "TID251", "TID252"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "use pytest-mock instead"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query", "app.utils.resolve_instance"]

[tool.mypy]
files = "app,tests"
python_version = "3.12"
strict = true
cache_dir = "~/.cache/mypy"

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = [
    "tests",
]

[tool.codespell]
skip = [
    "./static/*.js",
    "./secrets/*",
]
